--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
-spring:
-  security:
-    user:
-      name: autourducode
-      password: demo
+# spring:
+#   security:
+#     user:
+#       name: autourducode
+#       password: demo
